# franzpedigree

./: AUTHORS  CROSSCOMPILE  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  cc.sh  config.h.in  configure  configure.ac  configure.ac.WIN32  configure.ac.unix
examples/: Makefile.am  Makefile.in  README
examples/Romanov/input/: Romanov.freqs
examples/penaeus_monodon/input/: penaeus_monodon.mothers  penaeus_monodon.pedigree
examples/simpsons/: simpsons.mothers  simpsons.pedigree  simpsons.siblings
extras/: Makefile.am  Makefile.in  Prepare_Run_FRANz.R  README
extras/input/: Makefile  Makefile.am  Makefile.in  csv.pl  microsat.pl  migrate.pl
extras/input/.svn/: entries
extras/input/.svn/text-base/: csv.pl.svn-base
extras/input/web/cgi-bin/: file-upload.cgi
extras/input/web/html/: file-upload.css  file-upload.js
extras/installer/: Makefile.am  Makefile.in
extras/installer/mac/: Makefile.am  Makefile.in
extras/installer/mac/FRANzInstaller.pmdoc/: 01markus.xml  01readme-contents.xml  01readme.xml  02franz-contents.xml  02franz.xml  02readme-contents.xml  02readme.xml  03examples-contents.xml  03examples.xml  03franz-contents.xml  03franz.xml  04changelog-contents.xml  04changelog.xml  04franz-contents.xml  04franz.xml  05franz-contents.xml  05franz.xml  05penaeus-contents.xml  05penaeus.xml  06changelog-contents.xml  06changelog.xml  07extras-contents.xml  07extras.xml  index.xml
extras/installer/win/: FRANz.nsi  Makefile.am  Makefile.in
libdir/: Makefile.am  Makefile.in
libdir/dcmt/: Makefile.am  Makefile.in
libdir/dcmt/include/: Makefile.am  Makefile.in
libdir/dcmt/lib/: Makefile.am  Makefile.in
m4/: coverage.m4
man/: FRANz.1  Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  cmdline.c  cmdline.h  dag.c  dag.h  dataio.c  dataio.h  exact.c  exact.h  freq.c  freq.h  genotype.c  genotype.h  global.h  hwe.c  hwe.h  ibd.c  ibd.h  listdag.c  listdag.h  listparentage.c  listparentage.h  ll.h  lod.c  lod.h  macros.h  main.c  main_sim.c  mcmc.c  mcmc.h  null.c  null.h  options.c  options.h  pedigree.c  pedigree.h  prob.c  prob.h  pvalue.c  (+8 more)
t/: Makefile.am  Makefile.in  cervus_tests.c  dag_tests.c  hwe_tests.c  io_tests.c  ll_tests.c  mcmc_tests.c  mlrelate_tests.c  prob_tests.c  tap.c  utils_tests.c
t/testdata/: 123.coord  123.dist  penaeus_monodon.dist
