EXTRA_DIST = README simpsons/simpsons.dat simpsons/simpsons.mothers simpsons/simpsons.siblings simpsons/simpsons.pedigree simpsons/futurama.dat\
			penaeus_monodon/input/penaeus_monodon.dat penaeus_monodon/input/penaeus_monodon.pedigree penaeus_monodon/input/penaeus_monodon.mothers \
			Romanov/input/Romanov.dat Romanov/input/Romanov.freqs

