
bin_PROGRAMS=FRANz FRANz_sim
FRANz_SOURCES=main.c dag.c utils.c dataio.c prob.c listparentage.c listdag.c mcmc.c vtprogressbar.c cmdline.c options.c hwe.c freq.c pedigree.c sim.c null.c ibd.c lod.c genotype.c pvalue.c exact.c\
                        dag.h dataio.h prob.h ll.h listparentage.h listdag.h mcmc.h vtprogressbar.h cmdline.h options.h hwe.h freq.h pedigree.h utils.h sim.h uthash.h null.h ibd.h lod.h genotype.h pvalue.h exact.h ../libdir/dcmt/include/dc.h 


FRANz_sim_SOURCES=main_sim.c dag.c utils.c dataio.c prob.c  listparentage.c hwe.c listdag.c options.c freq.c pedigree.c vtprogressbar.c sim.c null.c genotype.c lod.c ibd.c pvalue.c \
                        dag.h dataio.h utils.h prob.h ll.h listparentage.h hwe.h listdag.h options.h freq.h pedigree.h vtprogressbar.h sim.h stats.h null.h genotype.h lod.h ibd.h pvalue.h ../libdir/dcmt/include/dc.h


FRANz_LDADD=../libdir/dcmt/lib/libdcmt.a
FRANz_sim_LDADD=../libdir/dcmt/lib/libdcmt.a

